Fix tab titles not showing up on mobile

--- a/src/pages/About/About.scss
+++ b/src/pages/About/About.scss
@@ -132,3 +132,11 @@ i.arrow {
     margin-left: 15px;
     align-self: center;
 }
+
+.tab-title {
+    font-family: 'Jura', 'Montserrat', sans-serif;
+    font-size: 24px;
+    font-weight: 500;
+    color: #409ABF;
+    display: block !important;
+}
