--- a/src/pages/OpenCalls/OpenCalls.scss
+++ b/src/pages/OpenCalls/OpenCalls.scss
@@ -41,3 +41,11 @@
 .tab-heading {
     font-weight: 700;
 }
+
+.tab-title {
+    font-family: 'Jura', 'Montserrat', sans-serif;
+    font-size: 24px;
+    font-weight: 500;
+    color: #409ABF;
+    display: block !important;
+}
